Handling Errors and Ticket Printing